# BP-MPC_improving_closed_loop_MPC_performance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt
bpmpc/p2l/: __init__.py
bpmpc/sys_id/: __init__.py
bpmpc/variable/: __init__.py
bpmpc_jax/closed_loop/: __init__.py
bpmpc_jax/dynamics/: __init__.py
bpmpc_jax/env/: __init__.py
bpmpc_jax/mpc/: __init__.py
code_description/: Dynamics.md  Variable.md
code_description/closed_loop/: ClosedLoop.md  RunLogger.md  TrajectoryStorage.md
code_description/mpc/: Constraint.md  Cost.md  SlackSpec.md
examples/: example_autonomous_car.py  example_random_linear_model.py  example_swingup.py  example_swingup_parallel_models.py  mpc_dense_benchmark.py  mpc_dense_benchmark_rev.py  mpc_example_dense_simulator.py  mpc_example_sparse_simulator.py  mpc_sparse_benchmark.py
examples/dynamics/: autonomous_car.py  random_linear.py
examples/pendulum/: pendulum_swingup.py  pendulum_swingup_low_level.py  pendulum_swingup_sgd.py
examples/random_linear_models/: cosine_similarity.py  generate_models.py  (+8 more)
latex_snippets/: main.tex
src/: options.py  plotter.py  qp.py  scenario.py  sim_var.py  upper_level.py
tests/: conftest.py  test_assembly.py  test_closed_loop.py  test_constraint.py  test_construction.py  test_cost.py  test_derivatives.py  test_dynamics.py  test_helpers.py  test_mpc.py  test_scenario.py  test_slack.py  test_solver.py  test_sys_id.py  test_sysid.py  test_validation.py
utils/: cost_utils.py  daqp_interface.py  linear.py  parameter_update.py  poles_to_linear_sys.py  sample_utils.py  sys_id.py
(+46 files in other folders)
