[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpmpc_jax"
version = "0.1.0"
description = "Parametric MPC builder on JAX"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]


# ── Hatch build config ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["bpmpc_jax"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"